--- a/src/AfterTheSilence.Xamarin/MainPage.xaml
+++ b/src/AfterTheSilence.Xamarin/MainPage.xaml
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage x:Class="AfterTheSilence.Xamarin.MainPage" xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+<ContentPage x:Class="AfterTheSilence.Xamarin.MainPage" xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:AfterTheSilence.Xamarin">
 
     <Grid>
-        
+        <local:ChatView/>
+
+
     </Grid>
 
 </ContentPage>
